Updated to be compatible with frontend
